macro/tests/failures/04-fail-field.stderr
error: expected struct field access
  --> $DIR/04-fail-field.rs:13:9
   |
13 |         "I should be a field.",
   |         ^^^^^^^^^^^^^^^^^^^^^^
